feat: removed unnecessary add-opens from poms