@@ -18,22 +18,4 @@
     <properties>
         <exec.mainClass>io.github.fontysvenlo.ais.persistence.api.PersistenceApi</exec.mainClass>
     </properties>
-        <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId> 
-                <configuration>
-                    <!-- add add-opens lines for **ALL** packages in your module that are tested.
-                        For testing it is fine to open your packages for the whole world, which includes
-                        e.g. junit, assertj, mockito, and jacoco, to name a few.
-                        Also leave ${argLine} because it is set/used by the coverage plugin.
-                    -->
-                    <argLine> 
-                        ${argLine}
-                        --add-opens persistence_api_module/io.github.fontysvenlo.ais.persistence.api=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
